# battery-optimization

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
battery_optimization/: battery_optimizer.py  const.py  data_handler.py
data/: dayahead_fifteen.feather  dayahead_hourly.feather
notebooks/: 0.0_price_timeseries_analysis.ipynb  0.1_battery_optimization.ipynb
