[tool.poetry]
name = "battery-optimization"
version = "0.1.0"
description = ""
authors = ["Andrea Turcati <aturcati@gmail.com>"]
readme = "README.md"
packages = [{include = "battery_optimization"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
