[tool.poetry]
name = "battery-optimization"
version = "0.1.0"
description = ""
authors = ["Andrea Turcati <aturcati@gmail.com>"]
readme = "README.md"
packages = [{include = "battery_optimization"}]

[tool.poetry.dependencies]
python = ">3.8,<=3.12"
numpy = "*"
scipy = ">=1.3"
pandas = ">=1.5.3"
matplotlib = ">=3.7.1"
scikit-learn = ">=1.2.2"
seaborn = ">=0.12.2"
jupyter = ">=1.0.0"
jupyterlab = ">=3.6.1"
pyarrow = ">=11.0.0"
statsmodels = ">=0.13.5"
holidays = ">=0.21.13"
pyomo = ">=6.5.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"
pytest = ">=7.2.2"
isort = ">=5.12.0"
mypy = ">=1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
